--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 
 <head>
     <meta charset="UTF-8">
@@ -45,7 +45,7 @@
                             <a class="nav-link tabs" href="#Categories">Categories</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link tabs" href="#contact">Contact</a>
+                            <a class="nav-link tabs" href="start.html">Start</a>
                         </li>
                     </ul>
                 </div>
