--- a/login/index.html
+++ b/login/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
-    <title>Login Form | MrDeveloper</title>
+    <title>Users </title>
 </head>
 <body>
     <div class="container" id="container">
