--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <nav class="navbar navbar-expand-sm fixed-top p-3 bg-primary bg-gradient" aria-label="Third navbar example">
         <div class="container-fluid">
-            <a class="navbar-brand fs-2 fw-bold text-body-emphasis" href="#">QuizKwik</a>
+            <a class="navbar-brand fs-2 fw-bold text-body-emphasis" href="/index.html" >QuizKwik</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
                 aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -30,10 +30,13 @@
                     <li><a href="#about" class="nav-link px-2 link-secondary text-white fs-5">About</a></li>
                     <li><a href="#contact" class="nav-link px-2 link-secondary text-white fs-5">Contact</a></li>
                 </ul>
-                <div class="text-end">
-                    <a href="login/"><button type="button" class="btn btn-warning fs-5">Sign-up</button></a>
+               <label class="switch" >
+                   <input type="checkbox" id="light">
+                   <span class="slider round"></span>
+               </label>
+                    <a class="px-3 text-center" href="login/"><button type="button"
+                            class="btn btn-warning fs-5">Sign-up</button></a>
                     <a href="login/"><button type="button" class="btn btn-outline-light me-2 fs-5">Login</button></a>
-                
                 </div>
             </div>
         </div>
