--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-sm fixed-top p-3 bg-primary bg-gradient" aria-label="Third navbar example">
+    <nav class="navbar navbar-expand-lg fixed-top p-3 bg-primary bg-gradient" aria-label="Third navbar example">
         <div class="container-fluid">
             <a class="navbar-brand fs-2 fw-bold text-body-emphasis" href="/index.html" >QuizKwik</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
