--- a/login/index.html
+++ b/login/index.html
@@ -29,11 +29,11 @@
         <div class="form-container sign-up">
             <form name="signup">
                 <h1>Create Account</h1>
-                <div class="social-icons">
+                <!-- <div class="social-icons">
                    <button class="login-with-google-btn">
                            Sign Up with Google
                        </button>
-                </div>
+                </div> -->
                 <span>or use your email for registeration</span>
                 <input id="UserName" type="text" placeholder="UserName" required>
                 <input id="mail" type="email" placeholder="Email" required>
@@ -45,12 +45,12 @@
         <div class="form-container sign-in">
             <form name="signin">
                 <h1>SignIn</h1>
-                <div class="social-icons">
+                <!-- <div class="social-icons">
                  <button type="button" class="login-with-google-btn">
                      Sign in with Google
-                 </button>
+                 </button> -->
                  
-                </div>
+                <!-- </div> -->
                 <span>or use your email passwrod</span>
                 <input id="email" type="email" placeholder="Email" required>
                 <input id="password" type="password" placeholder="Passowrd" required>
@@ -90,6 +90,4 @@
     });
 </script>
 <script src="script.js" type="module"></script>
-
-<!-- <script src="signup.js" type="module"></script> -->
 </html>
