--- a/login/index.html
+++ b/login/index.html
@@ -19,7 +19,7 @@
     
     <nav class="navbar navbar-expand-sm fixed-top p-3 " style="background: linear-gradient(to bottom left, #001dc2, #03cdff);" aria-label="Third navbar example">
         <div class="container-fluid">
-            <a class="navbar-brand fs-2 fw-bold text-body-emphasis" href="/index.html" >QuizKwik</a>
+            <a class="navbar-brand fs-2 fw-bold text-body-emphasis" href="../" >QuizKwik</a>
             
             </div>
         </div>
