--- a/index.html
+++ b/index.html
@@ -33,13 +33,36 @@
                     <li><a href="#about" class="nav-link px-2 link-secondary text-white fs-5">About</a></li>
                     <li><a href="#contact" class="nav-link px-2 link-secondary text-white fs-5">Contact</a></li>
                 </ul>
-               <div class="tab-element px-3 text-center">
+               <!-- <div class="tab-element px-3 text-center">
                     <label class="switch ">
                         <input type="checkbox" id="light">
                         <span class="slider round"></span>
-                    </label>
-                    <a href="login/"><button type="button"class="btn btn-warning fs-5">Sign-up</button></a>
+                    </label> -->
+                    
+                     <div class="tab-element px-3 text-center">
+                         <label class="switch btn-warning">
+                             <span class="sun"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                     <g fill="#ffd43b">
+                                         <circle r="5" cy="12" cx="12"></circle>
+                                         <path
+                                             d="m21 13h-1a1 1 0 0 1 0-2h1a1 1 0 0 1 0 2zm-17 0h-1a1 1 0 0 1 0-2h1a1 1 0 0 1 0 2zm13.66-5.66a1 1 0 0 1 -.66-.29 1 1 0 0 1 0-1.41l.71-.71a1 1 0 1 1 1.41 1.41l-.71.71a1 1 0 0 1 -.75.29zm-12.02 12.02a1 1 0 0 1 -.71-.29 1 1 0 0 1 0-1.41l.71-.66a1 1 0 0 1 1.41 1.41l-.71.71a1 1 0 0 1 -.7.24zm6.36-14.36a1 1 0 0 1 -1-1v-1a1 1 0 0 1 2 0v1a1 1 0 0 1 -1 1zm0 17a1 1 0 0 1 -1-1v-1a1 1 0 0 1 2 0v1a1 1 0 0 1 -1 1zm-5.66-14.66a1 1 0 0 1 -.7-.29l-.71-.71a1 1 0 0 1 1.41-1.41l.71.71a1 1 0 0 1 0 1.41 1 1 0 0 1 -.71.29zm12.02 12.02a1 1 0 0 1 -.7-.29l-.66-.71a1 1 0 0 1 1.36-1.36l.71.71a1 1 0 0 1 0 1.41 1 1 0 0 1 -.71.24z">
+                                         </path>
+                                     </g>
+                                 </svg></span>
+                             <span class="moon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512">
+                                     <path
+                                         d="m223.5 32c-123.5 0-223.5 100.3-223.5 224s100 224 223.5 224c60.6 0 115.5-24.2 155.8-63.4 5-4.9 6.3-12.5 3.1-18.7s-10.1-9.7-17-8.5c-9.8 1.7-19.8 2.6-30.1 2.6-96.9 0-175.5-78.8-175.5-176 0-65.8 36-123.1 89.3-153.3 6.1-3.5 9.2-10.5 7.7-17.3s-7.3-11.9-14.3-12.5c-6.3-.5-12.6-.8-19-.8z">
+                                     </path>
+                                 </svg></span>
+                             <input type="checkbox" id="light" class="input">
+                             <span class="slider"></span>
+                         </label>
+                     <a href="login/"><button type="button"class="btn btn-warning fs-5">Sign-up</button></a>
                     <a href="login/"><button type="button" class="btn btn-outline-light fs-5">Login</button></a>
+                        </div>
+
+
+                    
                </div>
                 </div>
             </div>
@@ -88,7 +111,7 @@
                 <div
                     class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="40" fill="currentColor"
-                        style="background-color: #ffffff;" class="bi bi-toggles2" viewBox="0 0 16 16">
+                        class="bi bi-toggles2" viewBox="0 0 16 16">
                         <path d="M9.465 10H12a2 2 0 1 1 0 4H9.465c.34-.588.535-1.271.535-2s-.195-1.412-.535-2" />
                         <path
                             d="M6 15a3 3 0 1 0 0-6 3 3 0 0 0 0 6m0 1a4 4 0 1 1 0-8 4 4 0 0 1 0 8m.535-10a4 4 0 0 1-.409-1H4a1 1 0 0 1 0-2h2.126q.138-.534.41-1H4a2 2 0 1 0 0 4z" />
@@ -101,7 +124,7 @@
                         thought-provoking questions
                         and discover your cognitive abilities. Challenge yourself and sharpen your critical thinking
                         skills today</p>
-                    <a href="login/" class="btn btn-outline-dark">
+                    <a href="login/" class="btn btn-outline">
                         Learn Here
                     </a>
                 </div>
@@ -110,7 +133,7 @@
                 <div
                     class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="40" fill="currentColor"
-                        style="background-color: #ffffff;" class="bi bi-cpu-fill" viewBox="0 0 16 16">
+                         class="bi bi-cpu-fill" viewBox="0 0 16 16">
                         <path d="M6.5 6a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5z" />
                         <path
                             d="M5.5.5a.5.5 0 0 0-1 0V2A2.5 2.5 0 0 0 2 4.5H.5a.5.5 0 0 0 0 1H2v1H.5a.5.5 0 0 0 0 1H2v1H.5a.5.5 0 0 0 0 1H2v1H.5a.5.5 0 0 0 0 1H2A2.5 2.5 0 0 0 4.5 14v1.5a.5.5 0 0 0 1 0V14h1v1.5a.5.5 0 0 0 1 0V14h1v1.5a.5.5 0 0 0 1 0V14h1v1.5a.5.5 0 0 0 1 0V14a2.5 2.5 0 0 0 2.5-2.5h1.5a.5.5 0 0 0 0-1H14v-1h1.5a.5.5 0 0 0 0-1H14v-1h1.5a.5.5 0 0 0 0-1H14v-1h1.5a.5.5 0 0 0 0-1H14A2.5 2.5 0 0 0 11.5 2V.5a.5.5 0 0 0-1 0V2h-1V.5a.5.5 0 0 0-1 0V2h-1V.5a.5.5 0 0 0-1 0V2h-1zm1 4.5h3A1.5 1.5 0 0 1 11 6.5v3A1.5 1.5 0 0 1 9.5 11h-3A1.5 1.5 0 0 1 5 9.5v-3A1.5 1.5 0 0 1 6.5 5" />
@@ -123,7 +146,7 @@
                         quick questionnaire to ensure you're ready for the challenge ahead. Take the test, level up
                         your
                         understanding, and then enjoy the game with confidence!</p>
-                    <a href="login/" class="btn btn-outline-dark">
+                    <a href="login/" class="btn btn-outline">
                         Learn Here
                     </a>
                 </div>
@@ -132,7 +155,7 @@
                 <div
                     class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
                     <svg xmlns="http://www.w3.org/2000/svg" width="30" height="40" fill="currentColor"
-                        style="background-color: #ffffff;" class="bi bi-tools" viewBox="0 0 16 16">
+                         class="bi bi-tools" viewBox="0 0 16 16">
                         <path
                             d="M1 0 0 1l2.2 3.081a1 1 0 0 0 .815.419h.07a1 1 0 0 1 .708.293l2.675 2.675-2.617 2.654A3.003 3.003 0 0 0 0 13a3 3 0 1 0 5.878-.851l2.654-2.617.968.968-.305.914a1 1 0 0 0 .242 1.023l3.27 3.27a.997.997 0 0 0 1.414 0l1.586-1.586a.997.997 0 0 0 0-1.414l-3.27-3.27a1 1 0 0 0-1.023-.242L10.5 9.5l-.96-.96 2.68-2.643A3.005 3.005 0 0 0 16 3q0-.405-.102-.777l-2.14 2.141L12 4l-.364-1.757L13.777.102a3 3 0 0 0-3.675 3.68L7.462 6.46 4.793 3.793a1 1 0 0 1-.293-.707v-.071a1 1 0 0 0-.419-.814zm9.646 10.646a.5.5 0 0 1 .708 0l2.914 2.915a.5.5 0 0 1-.707.707l-2.915-2.914a.5.5 0 0 1 0-.708M3 11l.471.242.529.026.287.445.445.287.026.529L5 13l-.242.471-.026.529-.445.287-.287.445-.529.026L3 15l-.471-.242L2 14.732l-.287-.445L1.268 14l-.026-.529L1 13l.242-.471.026-.529.445-.287.287-.445.529-.026z" />
                     </svg>
@@ -146,7 +169,7 @@
                         insights
                         and discoveries with friends and fellow learners. Let's embark on a journey of discovery
                         together!</p>
-                    <a href="login/" class="btn btn-outline-dark">
+                    <a href="login/" class="btn btn-outline">
                         Learn Here
                     </a>
                 </div>
