--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <div class="collapse navbar-collapse" id="navbarsExample03">
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                         <!-- <ul class="navbar-nav ml-auto tab-element"> -->
-                    <li><a href="#hero-sec" class="nav-link px-2 link-secondary text-white fs-5">Home</a></li>
-                    <li><a href="#hanging-icons" class="nav-link px-2 link-secondary text-white fs-5">Features</a></li>
-                    <li><a href="#about" class="nav-link px-2 link-secondary text-white fs-5">About</a></li>
-                    <li><a href="#contact" class="nav-link px-2 link-secondary text-white fs-5">Contact</a></li>
+                    <li><a href="#hero-sec" class="nav-link px-2 link-secondary text-white fs-4">Home</a></li>
+                    <li><a href="#hanging-icons" class="nav-link px-2 link-secondary text-white fs-4">Features</a></li>
+                    <li><a href="#about" class="nav-link px-2 link-secondary text-white fs-4">About</a></li>
+                    <li><a href="#contact" class="nav-link px-2 link-secondary text-white fs-4">Contact</a></li>
                 </ul>
                <!-- <div class="tab-element px-3 text-center">
                     <label class="switch ">
@@ -132,12 +132,13 @@
             <div class="col d-flex align-items-start">
                 <div
                     class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="40" fill="currentColor"
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="40" fill="currentColor" background-color: #f94f4600
                          class="bi bi-cpu-fill" viewBox="0 0 16 16">
                         <path d="M6.5 6a.5.5 0 0 0-.5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 0-.5-.5z" />
                         <path
                             d="M5.5.5a.5.5 0 0 0-1 0V2A2.5 2.5 0 0 0 2 4.5H.5a.5.5 0 0 0 0 1H2v1H.5a.5.5 0 0 0 0 1H2v1H.5a.5.5 0 0 0 0 1H2v1H.5a.5.5 0 0 0 0 1H2A2.5 2.5 0 0 0 4.5 14v1.5a.5.5 0 0 0 1 0V14h1v1.5a.5.5 0 0 0 1 0V14h1v1.5a.5.5 0 0 0 1 0V14h1v1.5a.5.5 0 0 0 1 0V14a2.5 2.5 0 0 0 2.5-2.5h1.5a.5.5 0 0 0 0-1H14v-1h1.5a.5.5 0 0 0 0-1H14v-1h1.5a.5.5 0 0 0 0-1H14v-1h1.5a.5.5 0 0 0 0-1H14A2.5 2.5 0 0 0 11.5 2V.5a.5.5 0 0 0-1 0V2h-1V.5a.5.5 0 0 0-1 0V2h-1V.5a.5.5 0 0 0-1 0V2h-1zm1 4.5h3A1.5 1.5 0 0 1 11 6.5v3A1.5 1.5 0 0 1 9.5 11h-3A1.5 1.5 0 0 1 5 9.5v-3A1.5 1.5 0 0 1 6.5 5" />
-                    </svg>
+                  
+                        </svg>
                 </div>
                 <div>
                     <h3 class="fs-2 text-body-emphasis">Test before Play</h3>
