--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+      <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
@@ -32,14 +33,8 @@
                     <li><a href="#hanging-icons" class="nav-link px-2 link-secondary text-white fs-4">Features</a></li>
                     <li><a href="#about" class="nav-link px-2 link-secondary text-white fs-4">About</a></li>
                     <li><a href="#contact" class="nav-link px-2 link-secondary text-white fs-4">Contact</a></li>
-                </ul>
-               <!-- <div class="tab-element px-3 text-center">
-                    <label class="switch ">
-                        <input type="checkbox" id="light">
-                        <span class="slider round"></span>
-                    </label> -->
-                    
-                     <div class="tab-element px-3 text-center">
+                </ul>          
+             <div class="tab-element px-3 text-center">
                          <label class="switch btn-warning">
                              <span class="sun"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
                                      <g fill="#ffd43b">
@@ -59,10 +54,7 @@
                          </label>
                      <a href="login/"><button type="button"class="btn btn-warning fs-5">Sign-up</button></a>
                     <a href="login/"><button type="button" class="btn btn-outline-light fs-5">Login</button></a>
-                        </div>
-
-
-                    
+              </div>
                </div>
                 </div>
             </div>
@@ -257,5 +249,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
