--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiz Application</title>
+    <title>QuizKwik</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg fixed-top p-3 bg-primary bg-gradient" aria-label="Third navbar example">
         <div class="container-fluid">
-            <a class="navbar-brand fs-2 fw-bold text-body-emphasis" href="https://dineshdhayfule.github.io/QuizKwik/" >QuizKwik</a>
+            <a class="navbar-brand fs-2 fw-bold text-body-emphasis" href="/index.html" >QuizKwik</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
                 aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
                 <span >
@@ -92,7 +92,7 @@
             </div>
         </div>
     </div>
-    <hr>
+    <!-- <hr> -->
 
     <!-- Feature Section -->
     <div class="container px-4 py-3 mt-5 mb-3" id="hanging-icons">
@@ -170,7 +170,7 @@
         </div>
     </div>
 
-    <hr>
+    <!-- <hr> -->
 
     <!-- About Section -->
     <div class="container mt-5 mb-5 py-3" id="about">
@@ -203,7 +203,7 @@
         </div>
     </div>
 
-    <hr>
+    <!-- <hr> -->
 
     <!-- Contact Section -->
     <div class="container col-xxl-8 px-4 py-3" id="contact">
@@ -240,7 +240,7 @@
         </div>
     </div>
 
-    <hr>
+    <!-- <hr> -->
 
     <!-- footer Section -->
     <footer class="py-3 my-4">
