--- a/index.html
+++ b/index.html
@@ -5,20 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuizKwik</title>
+    <!-- bootstrap css  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
       <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+      <!-- bootstrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
+
+    <!-- aos css and js -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
 </head>
 
-<body>
+<body >
 
     <nav class="navbar navbar-expand-lg fixed-top p-3 bg-primary bg-gradient" aria-label="Third navbar example">
         <div class="container-fluid">
-            <a class="navbar-brand fs-2 fw-bold text-body-emphasis" href="#" >QuizKwik</a>
+            <a class="navbar-brand fs-2 fw-bold text-body-emphasis" href="/index.html" >QuizKwik</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03"
                 aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
                 <span >
@@ -95,7 +102,10 @@
     <!-- <hr> -->
 
     <!-- Feature Section -->
-    <div class="container px-4 py-3 mt-5 mb-3" id="hanging-icons">
+
+  <!-- <div > -->
+
+    <div data-aos="fade-up" class="container px-4 py-3 mt-5 mb-3 flip-right" id="hanging-icons">
         <h1 class="pb-2 text-center"><span class="text-primary">Play</span>, <span class="text-primary">learn</span> and
             <span class="text-primary">Gain</span> Knowledge</h1>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3 mt-3">
@@ -170,13 +180,13 @@
         </div>
     </div>
 
-    <!-- <hr> -->
+    <!-- </div> -->
 
     <!-- About Section -->
     <div class="container mt-5 mb-5 py-3" id="about">
         <div class="row align-items-center">
             <div class="col-12 col-md-5 col-lg-6 order-md-1">
-                <img src="images/colors-students-at-graduation-ceremony.png" alt="..."
+                <img data-aos="fade-up" src="images/colors-students-at-graduation-ceremony.png" alt="..."
                     class="d-block mx-lg-auto img-fluid" width="550" height="550" loading="lazy">
             </div>
 
@@ -206,12 +216,12 @@
     <!-- <hr> -->
 
     <!-- Contact Section -->
-    <div class="container col-xxl-8 px-4 py-3" id="contact">
+    <div data-aos="fade-right" class="container col-xxl-8 px-4 py-3" id="contact">
         <h1 class="pb-2 text-center mt-3">Have You Any <span class="text-primary">Question</span>? Please Drop a <span
                 class="text-primary">Message</span></h1>
         <div class="row flex-lg-row-reverse align-items-center g-5 py-3">
             <div class="col-10 col-sm-8 col-lg-6 m-2">
-                <img src="images/shine-support-operator-helps-to-solve-the-problem-1.png"
+                <img  src="images/shine-support-operator-helps-to-solve-the-problem-1.png"
                     class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="700" loading="lazy">
             </div>
             <div class="col-md-10 mx-auto col-lg-5 m-5">
