--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
+    <script>
+        AOS.init({
+        easing: 'ease-in-out-sine'
+        });
+    </script>
 </head>
 
 <body >
@@ -73,7 +78,8 @@
     <div class="container col-xxl-8 px-4 py-5" id="hero-sec">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
-                <img src="images/hero.gif" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
+                <img data-aos="fade-up" src="images/hero.gif" class="d-block mx-lg-auto img-fluid"
+                    alt="Bootstrap Themes" width="700"
                     height="700" loading="lazy">
             </div>
             <div class="col-lg-6">
@@ -186,7 +192,7 @@
     <div class="container mt-5 mb-5 py-3" id="about">
         <div class="row align-items-center">
             <div class="col-12 col-md-5 col-lg-6 order-md-1">
-                <img data-aos="fade-up" src="images/colors-students-at-graduation-ceremony.png" alt="..."
+                <img data-aos="fade-right" src="images/colors-students-at-graduation-ceremony.png" alt="..."
                     class="d-block mx-lg-auto img-fluid" width="550" height="550" loading="lazy">
             </div>
 
@@ -216,12 +222,12 @@
     <!-- <hr> -->
 
     <!-- Contact Section -->
-    <div data-aos="fade-right" class="container col-xxl-8 px-4 py-3" id="contact">
+    <div  class="container col-xxl-8 px-4 py-3" id="contact">
         <h1 class="pb-2 text-center mt-3">Have You Any <span class="text-primary">Question</span>? Please Drop a <span
                 class="text-primary">Message</span></h1>
         <div class="row flex-lg-row-reverse align-items-center g-5 py-3">
             <div class="col-10 col-sm-8 col-lg-6 m-2">
-                <img  src="images/shine-support-operator-helps-to-solve-the-problem-1.png"
+                <img data-aos="fade-left" src="images/shine-support-operator-helps-to-solve-the-problem-1.png"
                     class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="700" loading="lazy">
             </div>
             <div class="col-md-10 mx-auto col-lg-5 m-5">
