--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
     <div class="container col-xxl-8 px-4 py-5" id="hero-sec">
         <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
             <div class="col-10 col-sm-8 col-lg-6">
-                <img data-aos="fade-up" src="images/hero.gif" class="d-block mx-lg-auto img-fluid"
+                <img data-aos="fade-up" data-aos-easing="ease-in-sine" src="images/hero.gif"
+                    class="d-block mx-lg-auto img-fluid"
                     alt="Bootstrap Themes" width="700"
                     height="700" loading="lazy">
             </div>
@@ -111,7 +112,8 @@
 
   <!-- <div > -->
 
-    <div data-aos="fade-up" class="container px-4 py-3 mt-5 mb-3 flip-right" id="hanging-icons">
+    <div data-aos="fade-up" data-aos-easing="ease-in-sine" class="container px-4 py-3 mt-5 mb-3 flip-right"
+        id="hanging-icons">
         <h1 class="pb-2 text-center"><span class="text-primary">Play</span>, <span class="text-primary">learn</span> and
             <span class="text-primary">Gain</span> Knowledge</h1>
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3 mt-3">
@@ -192,7 +194,8 @@
     <div class="container mt-5 mb-5 py-3" id="about">
         <div class="row align-items-center">
             <div class="col-12 col-md-5 col-lg-6 order-md-1">
-                <img data-aos="fade-right" src="images/colors-students-at-graduation-ceremony.png" alt="..."
+                <img data-aos-easing="ease-in-sine" data-aos="fade-right"
+                    src="images/colors-students-at-graduation-ceremony.png" alt="..."
                     class="d-block mx-lg-auto img-fluid" width="550" height="550" loading="lazy">
             </div>
 
