--- a/quiz/index.html
+++ b/quiz/index.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QuizKwik</title>
-          <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+          <!-- <link rel="icon" type="image/x-icon" href="/images/favicon.ico"> -->
+          <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
 </head>
 
 <body>
