--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>QuizKwik</title>
     <!-- bootstrap css  -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -234,11 +235,12 @@
                     class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="700" loading="lazy">
             </div>
             <div class="col-md-10 mx-auto col-lg-5 m-5">
-                <form class="p-4 p-md-5 border border-dark rounded-3 bg-body-tertiary">
+                <form class="p-4 p-md-5 border border-dark rounded-3 bg-body-tertiary"
+                    action="mailto:dineshdhayfule@gmail.com" method="post" enctype="text/plain">
                     <div class="form-floating mb-3">
-                        <input type="text" class="form-control border border-primary" id="floatingInput"
+                        <input type="text" class="form-control border border-primary" id="id=" name""
                             placeholder="Josh Booten" required>
-                        <label for="floatingInput">Your Name</label>
+                        <label for="id="name"">Your Name</label>
                     </div>
                     <div class="form-floating mb-3">
                         <input type="email" class="form-control border-primary" id="floatingInput"
@@ -247,11 +249,11 @@
                     </div>
                     <div class="form-floating">
                         <textarea class="form-control border-primary" placeholder="Leave a comment here"
-                            id="floatingTextarea" required></textarea>
-                        <label for="floatingTextarea">Message</label>
+                            id="id="message"" required></textarea>
+                        <label for="id=" message"">Message</label>
                     </div>
 
-                    <button class="w-100 btn btn-lg btn-primary mt-3" type="submit">Submit</button>
+                    <input class="w-100 btn btn-lg btn-primary mt-3" type="submit" value="Submit">
                     <hr class="my-4">
                     <small class="text-body-secondary">By clicking Submit, you can send your feedback with us.</small>
                 </form>
